# unnamed-rpg

./: Cargo.toml
assets/: registry.json
assets/manifests/: blueprints.assets.ron  character_models.assets.ron  environmental_animation.assets.ron  materials.assets.ron  player_animations.assets.ron
assets/models/: uli.glb
assets/models/scene/: Scene.glb  teahouse.blend  teahouse.blend1
assets/scenes/: ExportScene.glb  Scene.glb  teahouse.blend  teahouse.blend1
assets/scenes/materials/: teahouse_materials_library.glb
src/: assets.rs  camera.rs  input.rs  item.rs  main.rs  player.rs  types.rs
src/animation/: mod.rs
src/environment/: mod.rs
src/physics/: collision.rs  mod.rs  systems.rs  types.rs
src/ui/: mod.rs
