[package]
name = "unnamed-rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
bevy-inspector-egui = "0.23.4"
bevy_asset_loader = {version = "0.20.0", features = ["standard_dynamic_assets", "3d"]}

bevy_rapier3d = "0.25.0"
leafwing-input-manager = "0.13.0"
