[package]
name = "unnamed-rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
bevy-inspector-egui = "0.23.4"
bevy_asset_loader = {version = "0.20.0", features = ["standard_dynamic_assets", "3d"]}
bevy_gltf_blueprints = "0.9.0"
bevy_gltf_components = "0.5.0"
bevy_rapier3d = "0.25.0"
bevy_registry_export = "0.3.0"
bevy_xpbd_3d = "0.4.2"
leafwing-input-manager = "0.13.0"

[profile.dev.package."*"]
opt-level = 3
